--- a/index.html
+++ b/index.html
@@ -52,23 +52,29 @@
       A compact, customizable, MVC framework for PHP.
     </div>
 
-    <p>Provides:
+    <p>Provides:</p>
 
-* DB Abstraction Layer (over PDO)
-* Controllers/Actions (hybrid)
-* Models
-* Templates
-* Caching (coming soon)
-</p><h2>Dependencies</h2>
+    <ul>
+    <li>DB Abstraction Layer (over PDO)</li>
+    <li>Controllers/Actions (hybrid)</li>
+    <li>Models</li>
+    <li>Templates</li>
+    <li>Caching (coming soon)</li>
+    </ul>
+    
+<h2>Dependencies</h2>
 <p>PHP 5, PDO.</p>
 <h2>Install</h2>
 <p>Include a configuration array and 'shortstack.php' to initialize the framework.</p>
 <h2>License</h2>
 <p>MIT License</p>
 <h2>Authors</h2>
-<p>M@ McCray (darthapo@gmail.com)<br/><br/>      </p>
+<p>M@ McCray (darthapo@gmail.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>M@ McCray (darthapo@gmail.com)<br/>      </p>
+<p>M@ McCray (darthapo@gmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
